--- a/src/app/components/software/software.component.css
+++ b/src/app/components/software/software.component.css
@@ -61,8 +61,8 @@
 
 .grid-handset {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 2em;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 0.5em;
     justify-items: center;
     justify-self: center;
 }
